EN-162: Displayed unassigned Client when group by Client